libs/logging_client.h

/**
** @brief Must be called when the user try to do an action
** with a team that does not exist (list channels, subscribe, etc...)
** @param team_uuid The id that was given and does not exist
**
** Commands:
** /subscribe "team_uuid"
** /unsubscribe "team_uuid"
** /subscribed "team_uuid"
** /list
** /create "channel_name" "channel_description"
** /create "thread_title" "thread_body"
** /create "reply_body"
** /info
**/
int client_error_unknown_team(char const *team_uuid);
/**
** @brief Must be called when the user try to do an action
** with a channel that does not exist (list threads, create thread, etc...)
** @param channel_uuid The id that was given and does not exist
**
** Commands:
** /list
** /create "thread_title" "thread_body"
** /create "reply_body"
** /info
**/
int client_error_unknown_channel(char const *channel_uuid);
/**
** @brief Must be called when the user try to do an action
** with a thread that does not exist (list replies, create reply, etc...)
** @param thread_uuid The id that was given and does not exist
**
** Commands:
** /list
** /create "reply_body"
** /info
**/
int client_error_unknown_thread(char const *thread_uuid);
/**
** @brief Must be called when the user try to do an action
** with a user that does not exist (send private message, /user)
** @param user_uuid The id that was given and does not exist
**
** Commands:
** /send "user_uuid" "message_body"
** /user "user_uuid"
** /messages "user_uuid"
**/
int client_error_unknown_user(char const *user_uuid);
/**
** @brief Must be called when the user try to do an action he is not allowed
** to perform.
** Ex: create a thread in a team he is not subscribed
** Ex: create a team when he is not logged in
**
** Commands:
** Everything except /login
**/
int client_error_unauthorized(void);
/**
** @brief Must be called when the user try to do an action and the resource
** already exist.
** Ex: create a team with a name that already exist
** This error based itself on the name/title of the object created
**
** Commands:
** /create "team_name" "team_description"
** /create "channel_name" "channel_description"
** /create "thread_title" "thread_body"
**/
int client_error_already_exist(void);
/**
** @brief Must be called when you requested an individual user
** ex: get the current logged user, get information about a user
** @param user_uuid The id of the user
** @param user_name The name of the user
** @param user_status The status of the user (0: not connected; 1: connected)
**
** Commands:
** /user "user_uuid"
** /info
**/
int client_print_user(
    char const *user_uuid,
    char const *user_name,
    int user_status);
/**
** @brief Must be called when you requested an individual team
** ex: get the current used team
** @param team_uuid The id of the team
** @param team_name The name of the team
** @param team_description The description of the team
**
** Commands:
** /info
**/
int client_print_team(
    char const *team_uuid,
    char const *team_name,
    char const *team_description);
/**
** @brief Must be called when you requested an individual channel
** ex: get the current used channel
** @param channel_uuid The id of the channel
** @param channel_name The name of the channel
** @param channel_description The description of the channel
**
** Commands:
** /info
**/
int client_print_channel(
    char const *channel_uuid,
    char const *channel_name,
    char const *channel_description);
/**
** @brief Must be called when you requested an individual thread
** ex: get the current used thread
** @param thread_uuid The id of the thread
** @param user_uuid The id of the user who created the thread
** @param thread_timestamp The unix timestamp of the creation of the thread
** @param thread_title The title of the thread
** @param thread_body The body of the thread
**
** Commands:
** /info
**/
int client_print_thread(
    char const *thread_uuid,
    char const *user_uuid,
    time_t thread_timestamp,
    char const *thread_title,
    char const *thread_body);
/**
** @brief Must be called when you create a team successfully
** @param team_uuid The id of the team that was created
** @param team_name The name of the team that was created
** @param team_description The description of the team that was created
**
** Commands:
** /create "team_name" "team_description"
**/
int client_print_team_created(
    char const *team_uuid,
    char const *team_name,
    char const *team_description);
/**
** @brief Must be called when you create channel successfully
** @param channel_uuid The id of the channel that was created
** @param channel_name The name of the channel that was created
** @param channel_description The description of the channel that was created
**
** Commands:
** /create "channel_name" "channel_description"
**/
int client_print_channel_created(
    char const *channel_uuid,
    char const *channel_name,
    char const *channel_description);
/**
** @brief Must be called when you create a thread successfully
** @param thread_uuid The id of the thread that was created
** @param user_uuid The id of the user who created the thread
** @param thread_timestamp The unix timestamp of the thread creation
** @param thread_title The title of the thread that was created
** @param thread_body The body of the thread that was created
**
** Commands:
** /create "thread_title" "thread_body"
**/
int client_print_thread_created(
    char const *thread_uuid,
    char const *user_uuid,
    time_t thread_timestamp,
    char const *thread_title,
    char const *thread_body);
/**
** @brief Must be called when you create a reply successfully
** @param thread_uuid The id of the thread this reply was created in
** @param user_uuid The id of the user who created the reply
** @param reply_timestamp The unix timestamp of the created reply
** @param reply_body The body of the created reply
**
** Commands:
** /create "reply_body"
**/
int client_print_reply_created(
    char const *thread_uuid,
    char const *user_uuid,
    time_t reply_timestamp,
    char const *reply_body);
/**
** @brief Must be called when you subscribe to a team successfully
** @param user_uuid The id of the user who subscribed to the team
** @param team_uuid The id of the team the user subscribed to
**
** Commands:
** /subscribe "team_uuid"
**/
int client_print_subscribed(char const *user_uuid, char const *team_uuid);
/**
** @brief Must be called when you unsubscribe from a team successfully
** @param user_uuid The id of the user who unsubscribed from the team
** @param team_uuid The id of the team the user unsubscribed from
**
** Commands:
** /unsubscribe "team_uuid"
**/
int client_print_unsubscribed(char const *user_uuid, char const *team_uuid);