libs/logging_server.h

/*
** As the server never initialize an action all function here are called events
*/

/**
** @brief Must be called when a new team is created
** @param team_uuid The id of the team that was created
** @param team_name The name of the team that was created
** @param user_uuid The id of the user who created the new team
**
** Commands:
** /create "team_name" "team_description"
**/
int server_event_team_created(
    char const *team_uuid,
    char const *team_name,
    char const *user_uuid);
/**
** @brief Must be called when a new channel is created
** @param team_uuid The id of the team this channel is in
** @param channel_uuid The id of the created channel
** @param channel_name The name of the new channel
**
** Commands:
** /create "channel_name" "channel_description"
**/
int server_event_channel_created(
    char const *team_uuid,
    char const *channel_uuid,
    char const *channel_name);
/**
** @brief Must be called when a new thread is created
** @param channel_uuid The id of the channel this thread was created in
** @param thread_uuid The id of the created thread
** @param user_uuid The id of the user who created the thread
** @param thread_title The title of the created thread
** @param thread_body The body of the created thread
**
** Commands:
** /create "thread_title" "thread_body"
**/
int server_event_thread_created(
    char const *channel_uuid,
    char const *thread_uuid,
    char const *user_uuid,
    char const *thread_title,
    char const *thread_body);
/**
** @brief Must be called when a new reply is created in a thread
** @param thread_uuid The id of the thread this message was created in
** @param user_uuid The id of the user who created the reply
** @param reply_body The body of the created reply
**
** Commands:
** /create "reply_body"
**/
int server_event_reply_created(
    char const *thread_uuid,
    char const *user_uuid,
    char const *reply_body);
/**
** @brief Must be called when a user subscribe to a team
** @param team_uuid The id of the subscribed team
** @param user_uuid The id of the subscribed user
**
** Commands:
** /subscribe "team_uuid"
**/
int server_event_user_subscribed(char const *team_uuid, char const *user_uuid);
/**
** @brief Must be called when a user unsubscribe from a team
** @param team_uuid The id of the unsubscribed team
** @param user_uuid The id of the unsubscribed user
**
** Commands:
** /unsubscribe "team_uuid"
**/
int server_event_user_unsubscribed(char const *team_uuid, char const *user_uuid);