libs/src/bindings.rs

unsafe extern "C" {
    #[doc = " @brief Must be called when the user try to do an action\n with a team that does not exist (list channels, subscribe, etc...)\n @param team_uuid The id that was given and does not exist\n\n Commands:\n /subscribe \"team_uuid\"\n /unsubscribe \"team_uuid\"\n /subscribed \"team_uuid\"\n /list\n /create \"channel_name\" \"channel_description\"\n /create \"thread_title\" \"thread_body\"\n /create \"reply_body\"\n /info"]
    pub fn client_error_unknown_team(
        team_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when the user try to do an action\n with a channel that does not exist (list threads, create thread, etc...)\n @param channel_uuid The id that was given and does not exist\n\n Commands:\n /list\n /create \"thread_title\" \"thread_body\"\n /create \"reply_body\"\n /info"]
    pub fn client_error_unknown_channel(
        channel_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when the user try to do an action\n with a thread that does not exist (list replies, create reply, etc...)\n @param thread_uuid The id that was given and does not exist\n\n Commands:\n /list\n /create \"reply_body\"\n /info"]
    pub fn client_error_unknown_thread(
        thread_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when the user try to do an action\n with a user that does not exist (send private message, /user)\n @param user_uuid The id that was given and does not exist\n\n Commands:\n /send \"user_uuid\" \"message_body\"\n /user \"user_uuid\"\n /messages \"user_uuid\""]
    pub fn client_error_unknown_user(
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when the user try to do an action he is not allowed\n to perform.\n Ex: create a thread in a team he is not subscribed\n Ex: create a team when he is not logged in\n\n Commands:\n Everything except /login"]
    pub fn client_error_unauthorized() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when the user try to do an action and the resource\n already exist.\n Ex: create a team with a name that already exist\n This error based itself on the name/title of the object created\n\n Commands:\n /create \"team_name\" \"team_description\"\n /create \"channel_name\" \"channel_description\"\n /create \"thread_title\" \"thread_body\""]
    pub fn client_error_already_exist() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested an individual user\n ex: get the current logged user, get information about a user\n @param user_uuid The id of the user\n @param user_name The name of the user\n @param user_status The status of the user (0: not connected; 1: connected)\n\n Commands:\n /user \"user_uuid\"\n /info"]
    pub fn client_print_user(
        user_uuid: *const ::std::os::raw::c_char,
        user_name: *const ::std::os::raw::c_char,
        user_status: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested an individual team\n ex: get the current used team\n @param team_uuid The id of the team\n @param team_name The name of the team\n @param team_description The description of the team\n\n Commands:\n /info"]
    pub fn client_print_team(
        team_uuid: *const ::std::os::raw::c_char,
        team_name: *const ::std::os::raw::c_char,
        team_description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested an individual channel\n ex: get the current used channel\n @param channel_uuid The id of the channel\n @param channel_name The name of the channel\n @param channel_description The description of the channel\n\n Commands:\n /info"]
    pub fn client_print_channel(
        channel_uuid: *const ::std::os::raw::c_char,
        channel_name: *const ::std::os::raw::c_char,
        channel_description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you requested an individual thread\n ex: get the current used thread\n @param thread_uuid The id of the thread\n @param user_uuid The id of the user who created the thread\n @param thread_timestamp The unix timestamp of the creation of the thread\n @param thread_title The title of the thread\n @param thread_body The body of the thread\n\n Commands:\n /info"]
    pub fn client_print_thread(
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        thread_timestamp: time_t,
        thread_title: *const ::std::os::raw::c_char,
        thread_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you create a team successfully\n @param team_uuid The id of the team that was created\n @param team_name The name of the team that was created\n @param team_description The description of the team that was created\n\n Commands:\n /create \"team_name\" \"team_description\""]
    pub fn client_print_team_created(
        team_uuid: *const ::std::os::raw::c_char,
        team_name: *const ::std::os::raw::c_char,
        team_description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you create channel successfully\n @param channel_uuid The id of the channel that was created\n @param channel_name The name of the channel that was created\n @param channel_description The description of the channel that was created\n\n Commands:\n /create \"channel_name\" \"channel_description\""]
    pub fn client_print_channel_created(
        channel_uuid: *const ::std::os::raw::c_char,
        channel_name: *const ::std::os::raw::c_char,
        channel_description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you create a thread successfully\n @param thread_uuid The id of the thread that was created\n @param user_uuid The id of the user who created the thread\n @param thread_timestamp The unix timestamp of the thread creation\n @param thread_title The title of the thread that was created\n @param thread_body The body of the thread that was created\n\n Commands:\n /create \"thread_title\" \"thread_body\""]
    pub fn client_print_thread_created(
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        thread_timestamp: time_t,
        thread_title: *const ::std::os::raw::c_char,
        thread_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you create a reply successfully\n @param thread_uuid The id of the thread this reply was created in\n @param user_uuid The id of the user who created the reply\n @param reply_timestamp The unix timestamp of the created reply\n @param reply_body The body of the created reply\n\n Commands:\n /create \"reply_body\""]
    pub fn client_print_reply_created(
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        reply_timestamp: time_t,
        reply_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you subscribe to a team successfully\n @param user_uuid The id of the user who subscribed to the team\n @param team_uuid The id of the team the user subscribed to\n\n Commands:\n /subscribe \"team_uuid\""]
    pub fn client_print_subscribed(
        user_uuid: *const ::std::os::raw::c_char,
        team_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when you unsubscribe from a team successfully\n @param user_uuid The id of the user who unsubscribed from the team\n @param team_uuid The id of the team the user unsubscribed from\n\n Commands:\n /unsubscribe \"team_uuid\""]
    pub fn client_print_unsubscribed(
        user_uuid: *const ::std::os::raw::c_char,
        team_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new team is created\n @param team_uuid The id of the team that was created\n @param team_name The name of the team that was created\n @param user_uuid The id of the user who created the new team\n\n Commands:\n /create \"team_name\" \"team_description\""]
    pub fn server_event_team_created(
        team_uuid: *const ::std::os::raw::c_char,
        team_name: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new channel is created\n @param team_uuid The id of the team this channel is in\n @param channel_uuid The id of the created channel\n @param channel_name The name of the new channel\n\n Commands:\n /create \"channel_name\" \"channel_description\""]
    pub fn server_event_channel_created(
        team_uuid: *const ::std::os::raw::c_char,
        channel_uuid: *const ::std::os::raw::c_char,
        channel_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new thread is created\n @param channel_uuid The id of the channel this thread was created in\n @param thread_uuid The id of the created thread\n @param user_uuid The id of the user who created the thread\n @param thread_title The title of the created thread\n @param thread_body The body of the created thread\n\n Commands:\n /create \"thread_title\" \"thread_body\""]
    pub fn server_event_thread_created(
        channel_uuid: *const ::std::os::raw::c_char,
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        thread_title: *const ::std::os::raw::c_char,
        thread_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a new reply is created in a thread\n @param thread_uuid The id of the thread this message was created in\n @param user_uuid The id of the user who created the reply\n @param reply_body The body of the created reply\n\n Commands:\n /create \"reply_body\""]
    pub fn server_event_reply_created(
        thread_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
        reply_body: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user subscribe to a team\n @param team_uuid The id of the subscribed team\n @param user_uuid The id of the subscribed user\n\n Commands:\n /subscribe \"team_uuid\""]
    pub fn server_event_user_subscribed(
        team_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Must be called when a user unsubscribe from a team\n @param team_uuid The id of the unsubscribed team\n @param user_uuid The id of the unsubscribed user\n\n Commands:\n /unsubscribe \"team_uuid\""]
    pub fn server_event_user_unsubscribed(
        team_uuid: *const ::std::os::raw::c_char,
        user_uuid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
